<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->
<resources>
    <!-- Name of the app -->
    <string name="app_name">SimpleAccessibility</string>

    <!-- Label for the plain button -->
    <string name="button_text">Compose</string>

    <!-- Checkbox labels -->
    <string name="checkbox_text_jetpack">Enable jetpack</string>
    <string name="checkbox_text_hyperspace">Enable hyperspace</string>
    <string name="cloudy_image">Cloudy Image</string>
    <string name="button_image">button_image</string>
    <string name="message">Message</string>
    <string name="enter_your_message">Enter your Message</string>
</resources>
