<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- A plain text button.  The button label is read by TalkBack.
    No content description needed -->
    <Button
        android:id="@+id/button_plain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- An ImageButton. TalkBack cannot identify this button and
    reports it as "unlabelled button". Use android:contentDescription
    to provide a speakable label for the image. -->
    <ImageButton
        android:id="@+id/button_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_image"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/button_plain"
        app:layout_constraintTop_toTopOf="@+id/button_plain"
        app:srcCompat="@drawable/ic_action_discard" />

    <!-- Checkboxes. The checkbox text is read by TalkBack. No content
    description is needed. -->
    <CheckBox
        android:id="@+id/checkbox_jetpack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/checkbox_text_jetpack"
        app:layout_constraintLeft_toLeftOf="@+id/button_plain"
        app:layout_constraintTop_toBottomOf="@+id/button_plain" />

    <CheckBox
        android:id="@+id/checkbox_hyperspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_text_hyperspace"
        app:layout_constraintLeft_toLeftOf="@+id/checkbox_jetpack"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_jetpack" />

    <!-- An ImageView.  By default, ImageViews are treated as decorative images
    with no functionality or label and are ignored by TalkBack. Use
    android:contentDescription to provide a speakable label for the image. Use
    android:focusable to indicate this is a meaningful element.
    in the app. -->
    <ImageView
        android:id="@+id/image_partly_cloudy"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:contentDescription="@string/cloudy_image"
        app:layout_constraintLeft_toLeftOf="@+id/checkbox_hyperspace"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_hyperspace"
        app:srcCompat="@drawable/partly_cloudy" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:labelFor="@+id/edittext_message"
        app:layout_constraintTop_toBottomOf="@+id/image_partly_cloudy"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/edittext_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_message"
        app:layout_constraintStart_toStartOf="parent"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>
